--- a/Examples/Catalyst/CxxOverlappingAMRExample/CMakeLists.txt
+++ b/Examples/Catalyst/CxxOverlappingAMRExample/CMakeLists.txt
@@ -1,22 +1,23 @@
-cmake_minimum_required(VERSION 3.3)
-project(CatalystCxxOverlappingAMRExample)
+if (NOT USE_CATALYST)
+  message(STATUS
+    "Skipping CxxOverlappingAMRExample because `USE_CATALYST` is not set.")
+  return ()
+endif ()
 
-find_package(ParaView 4.1 REQUIRED COMPONENTS vtkPVPythonCatalyst)
-include("${PARAVIEW_USE_FILE}")
-set(Adaptor_SRCS
+add_library(CxxOverlappingAMRExampleAdaptor
   FEAdaptor.cxx
-  )
-add_library(CxxOverlappingAMRExampleAdaptor ${Adaptor_SRCS})
-target_link_libraries(CxxOverlappingAMRExampleAdaptor vtkPVPythonCatalyst)
+  FEAdaptor.h)
+target_link_libraries(CxxOverlappingAMRExampleAdaptor
+  PRIVATE
+    ParaView::PythonCatalyst)
 
-add_executable(CxxOverlappingAMRExample FEDriver.cxx)
-target_link_libraries(CxxOverlappingAMRExample CxxOverlappingAMRExampleAdaptor)
+add_executable(CxxOverlappingAMRExample
+  FEDriver.cxx)
+target_link_libraries(CxxOverlappingAMRExample
+  PRIVATE
+    CxxOverlappingAMRExampleAdaptor)
 
-option(BUILD_TESTING "Build Testing" OFF)
-# Setup testing.
 if (BUILD_TESTING)
-  include(CTest)
   add_test(NAME CxxOverlappingAMRExampleTest COMMAND CxxOverlappingAMRExample
     ${CMAKE_CURRENT_SOURCE_DIR}/SampleScripts/feslicescript.py)
-  set_tests_properties(CxxOverlappingAMRExampleTest PROPERTIES LABELS "PARAVIEW;CATALYST")
 endif()
