--- a/Examples/Catalyst/CxxSOADataArrayExample/CMakeLists.txt
+++ b/Examples/Catalyst/CxxSOADataArrayExample/CMakeLists.txt
@@ -1,38 +1,28 @@
-cmake_minimum_required(VERSION 3.3)
-project(CxxSOADataArrayExample)
-
-set(USE_CATALYST ON CACHE BOOL "Link the simulator with Catalyst")
-if(USE_CATALYST)
-  find_package(ParaView 4.1 REQUIRED COMPONENTS vtkPVPythonCatalyst)
-  include("${PARAVIEW_USE_FILE}")
-  set(Adaptor_SRCS
+if (USE_CATALYST)
+  add_library(CxxSOADataArrayExampleAdaptor
     FEAdaptor.cxx
-    )
-  add_library(CxxSOADataArrayExampleAdaptor ${Adaptor_SRCS})
-  target_link_libraries(CxxSOADataArrayExampleAdaptor vtkPVPythonCatalyst vtkParallelMPI)
-  add_definitions("-DUSE_CATALYST")
-  if(NOT PARAVIEW_USE_MPI)
-    message(SEND_ERROR "ParaView must be built with MPI enabled")
-  endif()
-else()
-  find_package(MPI REQUIRED)
-  include_directories(${MPI_C_INCLUDE_PATH})
-endif()
+    FEAdaptor.h)
+  target_link_libraries(CxxSOADataArrayExampleAdaptor
+    PRIVATE
+      ParaView::PythonCatalyst
+      VTK::ParallelMPI)
+endif ()
 
-add_executable(CxxSOADataArrayExample FEDriver.cxx FEDataStructures.cxx)
-if(USE_CATALYST)
-  target_link_libraries(CxxSOADataArrayExample LINK_PRIVATE CxxSOADataArrayExampleAdaptor)
-  include(vtkModuleMacros)
-  include(vtkMPI)
-  vtk_mpi_link(CxxSOADataArrayExample)
-else()
-  target_link_libraries(CxxSOADataArrayExample LINK_PRIVATE ${MPI_LIBRARIES})
-endif()
+add_executable(CxxSOADataArrayExample
+  FEDataStructures.cxx
+  FEDataStructures.h
+  FEDriver.cxx)
+if (TARGET CxxSOADataArrayExampleAdaptor)
+  target_link_libraries(CxxSOADataArrayExample
+    PRIVATE
+      CxxSOADataArrayExampleAdaptor
+      VTK::mpi)
+else ()
+  target_link_libraries(CxxSOADataArrayExample
+    PRIVATE
+      MPI::MPI_C)
+endif ()
 
-option(BUILD_TESTING "Build Testing" OFF)
-# Setup testing.
 if (BUILD_TESTING)
-  include(CTest)
   add_test(NAME CxxSOADataArrayExampleTest COMMAND CxxSOADataArrayExample ${CMAKE_CURRENT_SOURCE_DIR}/SampleScripts/feslicescript.py)
-  set_tests_properties(CxxSOADataArrayExampleTest PROPERTIES LABELS "PARAVIEW;CATALYST")
 endif()
