testing: set the baseline directory for XML tests
Fixes: #18736

--- a/Applications/ParaView/Testing/CMakeLists.txt
+++ b/Applications/ParaView/Testing/CMakeLists.txt
@@ -7,6 +7,7 @@ mark_as_advanced(PARAVIEW_CLIENT_RENDER_SERVER_TESTS)
 set(_vtk_build_TEST_OUTPUT_DATA_DIRECTORY "${paraview_test_data_directory_output}")
 set(_vtk_build_TEST_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Testing/Temporary")
 set(_vtk_build_TEST_DATA_TARGET "ParaViewData")
+set(PARAVIEW_TEST_BASELINE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Data/Baseline")
 
 add_subdirectory(XML)
 if (PARAVIEW_ENABLE_PYTHON)
