ParaViewPlugin: pass shared build information per client
Instead of asking whether ParaView itself was built shared or static,
use the status of the plugin's build directly.

--- a/CMake/paraview_plugin.h.in
+++ b/CMake/paraview_plugin.h.in
@@ -1,3 +1,4 @@
+#cmakedefine01 _paraview_add_plugin_built_shared
 #cmakedefine01 _paraview_add_plugin_with_python
 #cmakedefine01 _paraview_add_plugin_with_ui
 #cmakedefine01 _paraview_add_plugin_with_xml
