--- a/Qt/Core/CMakeLists.txt
+++ b/Qt/Core/CMakeLists.txt
@@ -125,6 +125,14 @@ if (NOT VTK_LEGACY_REMOVE)
     pqDebug)
 endif()
 
+set(built_shared 0)
+if (BUILD_SHARED_LIBS)
+  set(built_shared 1)
+endif ()
+set_property(SOURCE pqCoreInit.cxx APPEND
+  PROPERTY
+    COMPILE_DEFINITIONS "BUILD_SHARED_LIBS=${built_shared}")
+
 set(ui_files
   Resources/UI/pqFileDialog.ui
   Resources/UI/pqOutputWidget.ui
